--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "pod-install": "^0.1.38",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "^4.7.1",
