--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demoNav",
+  "name": "TravelApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -16,8 +16,10 @@
     "pod-install": "^0.1.38",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-maps": "^1.7.1",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0"
+    "react-native-screens": "^3.24.0",
+    "react-native-share": "^9.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
